Added the original website URLs for all script installers, displayed on the installation form and on the page showing details of an installed script.
Updated the phpMyAdmin script installer to 2.11.2.2, OpenAds to 2.4.2, phpBB to 3.0.RC8, ZenCart to 1.3.8, Plans Calendar to 7.9.8, and Instiki 0.12.0.
The initial administration login and password is displayed after installing a script.
Advanced autoreply options are hidden by default, to make the alias form less confusing.
When re-sending the signup email for a server, the owner's email address can be entered.
When there are too many servers on the List Virtual Servers page to show in a table, buttons to update and delete them all are displayed along with the seach form.
Added a Module Config option to make the Unix group name for a new domain always follow the username, and made group name selection more consistent across creation methods.
Moved the Administration username field into the first (visible) section of the Create Virtual Server page.
Cron jobs created by Virtualmin will still be recognized even if manually modified to redirect output or add other pre- and post-commands.
Virtualmin API scripts run via HTTP are now executed within the same process, which should make them about twice as fast.
Alias mail domains can now be implemented by copying virtusers into the alias rather than using a catchall. Under Postfix this allows email to invalid addresses in the alias domain to be rejected at the SMTP level. The default for this can be changed on the Server Templates page under Mail for domain, and it can be changed for existing domains on the Edit Virtual Server page.
Added the modify-aliascopy.pl command-line program to change the email aliasing mode (from catchall to copying virtusers).
Added --mailfiles flag to backup-domain.pl and restore-domain.pl, to save and restore inboxes outside of the home directory.