@@ -1779,7 +1779,7 @@ backup_vconfig=Module configuration
 backup_vtemplates=Server templates
 backup_vresellers=Reseller accounts
 backup_vemail=New mailbox email messages
-backup_vcustom=Custom fields
+backup_vcustom=Custom fields, links and shells
 backup_vscripts=Third-party script installers
 backup_vstyles=Third-party content styles
 backup_virtualmin=Virtualmin settings to also backup
