@@ -787,3 +787,5 @@ Virtualmin API scripts run via HTTP are now executed within the same process, wh
 Alias mail domains can now be implemented by copying virtusers into the alias rather than using a catchall. Under Postfix this allows email to invalid addresses in the alias domain to be rejected at the SMTP level. The default for this can be changed on the Server Templates page under Mail for domain, and it can be changed for existing domains on the Edit Virtual Server page.
 Added the modify-aliascopy.pl command-line program to change the email aliasing mode (from catchall to copying virtusers).
 Added --mailfiles flag to backup-domain.pl and restore-domain.pl, to save and restore inboxes outside of the home directory.
+Shells for mailboxes and domain owners are now configured on the new Custom Shells page, linked under System Customizatoin on the left menu. This allows you to define as many different shells as you like, for access levels like email only, FTP and SCP only. When editing mailboxes or domain owner limits, you can then select one of the defined shells.
+Added the list-available-shells.pl command-line program, and added the --shell parameter to create-user.pl and modify-user.pl. Also updated modify-limits.pl so that the --shell option can specify any defined shell.
